--- a/washing-machine/src/styles/index.css
+++ b/washing-machine/src/styles/index.css
@@ -1,67 +1,3 @@
-/* #wrapper {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-#washingMachine {
-  background: #c4c4d2;
-  width: 300px;
-  height: 500px;
-  border-radius: 5%;
-}
-
-#door {
-  width: 200px;
-  height: 200px;
-  border: 20px solid rgba(78, 40, 40, 0.582);
-  border-radius: 50%;
-  position: absolute;
-  z-index: 1;
-  box-shadow: rgba(black, 0.1);
-  transform-origin: 0% 0%;
-  transform: rotateY(0deg);
-  margin-left: 29px;
-  margin-top: 150px;
-}
-
-:after {
-  background: darken(#80819c, 10%);
-  height: 50%;
-  width: 17%;
-  right: 0;
-  border-radius: 40% 30% 30% 40% / 50% 45% 45% 50%;
-  transition: all 0.2s ease-in-out;
-  z-index: 3;
-}
-
-:before {
-  width: 60%;
-  height: 60%;
-  left: 0;
-  right: 0;
-  margin: auto;
-  border-radius: 50%;
-  border: 5px solid transparent;
-  border-left: 15px solid white;
-  transform: translateY(-50%) rotate(45deg);
-  opacity: 0.2;
-  box-shadow: inset -10px 10px 0 0 rgba(white, 0.2);
-  border-radius: 40% 30% 30% 40% / 50%;
-  z-index: 2;
-}
-
-:before,
-:after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-} */
 :root {
   --background-color: #a3a1a1;
   --machine-white: white;
@@ -70,19 +6,10 @@
   --darkest-gray: #636161;
 }
 
-body {
-  background: var(--background-color);
-}
-
 .box-canvas {
-  position: relative;
-  margin: auto;
-  display: block;
-  margin-top: 8%;
-  margin-bottom: 8%;
   width: 600px;
   height: 600px;
-  background: var(--background-color);
+  position: relative;
 }
 
 /* Main machine body */
@@ -99,6 +26,8 @@ body {
 /* Powder drawer */
 .drawer {
   position: absolute;
+  color: #5fbd9d;
+  text-align: center;
   top: 10px;
   left: 10px;
   width: 100px;
@@ -186,8 +115,11 @@ body {
   border-radius: 50%;
   background: var(--darkest-gray);
   overflow: hidden;
-  animation: drumRotate 2s infinite; 
   /*animation name*/
+}
+
+.isWashing {
+  animation: drumRotate 2s infinite;
 }
 
 /* Clothes inside machine */
@@ -196,7 +128,7 @@ body {
   position: absolute;
   width: 80px;
   height: 50px;
-  background: red;
+  background: hsla(49, 59%, 47%, 0.4);
   border-radius: 40%;
   bottom: 0;
 }
@@ -206,10 +138,98 @@ body {
   position: absolute;
   width: 90px;
   height: 50px;
-  background: var(--machine-white);
+  background: hsla(12, 59%, 47%, 0.4);
   border-radius: 40%;
-  bottom: 0;
-  left: 0;
+  bottom: 1px;
+  right: 2px;
+}
+
+.water {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  border-radius: 50px;
+  box-shadow: 18px 18px 30px rgba(209, 217, 230, 1),
+    -18px -18px 30px rgba(255, 255, 255, 1);
+  transform: translate3d(0, 0, 0);
+}
+
+.water:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0%;
+  border-radius: 50px;
+  background: linear-gradient(
+    transparent 0%,
+    transparent 40%,
+    hsla(188, 74%, 43%, 0.8) 100%
+  );
+  mix-blend-mode: color;
+  z-index: 4;
+  transform: translate3d(0, 0, 0);
+}
+
+.ripple-one {
+  position: absolute;
+  top: 20%;
+  width: 525px;
+  height: 525px;
+  border-radius: 45%;
+  transform-origin: 50% 48%;
+  animation: water 5s infinite linear;
+  background: hsla(212, 64%, 72%, 0.7);
+  z-index: 3;
+  transform: translate3d(0, 0, 0);
+}
+
+.ripple-two {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  border-radius: 42%;
+  top: 20%;
+  transform-origin: 50% 48%;
+  animation: water 4s infinite linear;
+  background: hsla(212, 64%, 72%, 0.4);
+  z-index: 2;
+}
+
+.ripple-three {
+  position: absolute;
+  top: 20%;
+  width: 650px;
+  height: 650px;
+  border-radius: 45%;
+  transform-origin: 50% 48%;
+  animation: water 6s infinite linear;
+  background: hsla(214, 55%, 73%, 0.4);
+  z-index: 1;
+}
+
+@keyframes water {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spacing {
+  0% {
+    letter-spacing: 0.7em;
+    margin-left: 0.7em;
+  }
+  100% {
+    letter-spacing: 1em;
+    margin-left: 1em;
+  }
 }
 
 @keyframes drumRotate {
