--- a/washing-machine/src/styles/index.css
+++ b/washing-machine/src/styles/index.css
@@ -21,6 +21,29 @@
   height: 400px;
   background: var(--machine-white);
   border-radius: 2%;
+  border-top: 15px solid #80819c;
+  overflow: hidden;
+  box-shadow: inset -15px -15px 0 0 rgb(196 196 210 / 30%);
+}
+.machine::before {
+  border-bottom-color: #5b5b5f;
+  height: 70px;
+  top: 37px;
+  border-radius: 50%;
+  box-shadow: inset 0 -15px 0 0 rgb(196 196 210 / 30%);
+  
+}
+.machine::after {
+  border-top-color: #c4c4d2;
+  height: 30px;
+  bottom: 0;
+}
+.machine::before,
+.machine::after {
+  content: "";
+  position: absolute;
+  border: 4px solid transparent;
+  width: 98%;
 }
 
 /* Powder drawer */
@@ -34,46 +57,54 @@
   height: 50px;
   border: 2px solid var(--machine-feature-gray);
   border-radius: 0 0 20% 0;
+  font-size: 16px;
+  background-color: #8080808c;
 }
 
 /* Drawer handle */
 .drawer::after {
   content: "";
   position: absolute;
-  width: 70px;
-  height: 15px;
-  background: var(--machine-feature-gray);
-  bottom: 5px;
-  right: 5px;
+  width: 94px;
+  height: 23px;
+  background: rgba(255, 255, 255, 0.801);
+  bottom: 3px;
+  right: 3px;
   border-radius: 0 0 30% 0;
 }
 
 /* Small LED display */
 .panel {
   position: absolute;
-  width: 40px;
-  height: 15px;
-  background: var(--darkest-gray);
-  left: 150px;
+  width: 88px;
+  height: 24px;
+  background: #0a0a0a;
+  left: 193px;
   top: 30px;
+  border-radius: 4px;
+  color: #4d9900;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  padding-top: 6px;
 }
 
 /* Light indicator in panel */
-.panel::before {
-  content: "";
+/* .panel::before {
   position: absolute;
-  width: 8px;
-  height: 10px;
-  background: var(--accent-green);
-  right: 5px;
-  top: 2px;
-}
+  width: 82px;
+  height: 28px;
+  background: #0a0a0a;
+  left: 193px;
+  top: 30px;
+  border-radius: 4px;
+} */
 
 /* Machine dial */
 .panel::after {
   content: "";
   position: absolute;
-  left: 80px;
+  left: -61px;
   top: -10px;
   width: 35px;
   height: 35px;
@@ -211,8 +242,107 @@
   background: hsla(214, 55%, 73%, 0.4);
   z-index: 1;
 }
+.soap-one {
+  transform-origin: 132% 94%;
+  animation: soap 5s ease-in-out infinite alternate;
+  background: rgba(197, 255, 255, 0.4);
+  z-index: 40;
+  left: 3%;
+  top: 20%;
+  transform: scale(0.4);
+}
+.soap-two {
+  transform-origin: 132% 94%;
+  animation: soap 6s ease-in-out infinite alternate;
+  background: rgba(197, 255, 255, 0.4);
+  z-index: 40;
+  left: 5%;
+  top: 50%;
+  transform: scale(0.4);
+}
+.soap-three {
+  width: 50%;
+  height: 50%;
+  transform-origin: 132% 94%;
+  animation: soap 7s ease-in-out infinite alternate;
+  background: rgba(197, 255, 255, 0.4);
+  z-index: 40;
+  left: 10%;
+  top: 30%;
+  transform: scale(0.4);
+}
+.soap-four {
+  transform-origin: 132% 94%;
+  animation: soap 7s ease-in-out infinite alternate;
+  background: rgba(197, 255, 255, 0.4);
+  z-index: 40;
+  left: 50%;
+  top: 50%;
+  transform: scale(0.4);
+}
+.soap-five {
+  transform-origin: 132% 94%;
+  animation: soap 7s ease-in-out infinite alternate;
+  background: rgba(197, 255, 255, 0.4);
+  z-index: 40;
+  left: 50%;
+  top: 10%;
+  transform: scale(0.4);
+}
+.soap-six {
+  transform-origin: 132% 94%;
+  animation: soap 10s ease-in-out infinite alternate;
+  background: rgba(197, 255, 255, 0.4);
+  z-index: 40;
+  left: 10%;
+  top: 10%;
+  transform: scale(0.4);
+}
+.soap {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
+    inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
+    inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+  border-radius: 50%;
+  box-shadow: 0 20px 30px rgb(239 233 233 / 7%),
+    inset 0px 10px 30px 5px rgb(80 180 218);
+  height: 31px;
+  position: absolute;
+  width: 31px;
+}
+
+.soap:after {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+  -moz-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+  box-shadow: inset 0 20px 30px rgb(226 233 234 / 30%);
+  content: "";
+  height: 35px;
+  left: 1px;
+  position: absolute;
+  width: 35px;
+}
+.playground {
+  margin-top: 25px;
+  width: 300px;
+  display: flex;
+  background: gray;
+}
 
 @keyframes water {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes soap {
   from {
     transform: rotate(0deg);
   }
