--- a/washing-machine/src/styles/index.css
+++ b/washing-machine/src/styles/index.css
@@ -31,7 +31,6 @@
   top: 37px;
   border-radius: 50%;
   box-shadow: inset 0 -15px 0 0 rgb(196 196 210 / 30%);
-  
 }
 .machine::after {
   border-top-color: #c4c4d2;
@@ -49,7 +48,7 @@
 /* Powder drawer */
 .drawer {
   position: absolute;
-  color: #5fbd9d;
+  color: black;
   text-align: center;
   top: 10px;
   left: 10px;
